--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -4,22 +4,18 @@ html, body
 
 /* Header */
 .layout-header
-  height: 100px
-  background: #000
-
-.layout-header_inner
-  width: 960px
-  margin: 0 auto
-  color: #fff
+  height: 60px
+  background: #5D83A9
+  border-radius: 0 0 5px 5px
 
 /* Main Wrapper */
 .layout-main
   width: 960px
   min-height: 100%
-  margin: 0 auto -100px
+  margin: 0 auto -60px
 
 .layout-empty
-  height: 99px
+  height: 60px
 
 /* Main Content */
 .layout-content
@@ -27,23 +23,22 @@ html, body
   float: left
 
 .layout-content_inner
-  margin-right: 300px
+  margin-left: 200px
 
 /* Sidebar */
 .layout-sidebar
   float: left
-  width: 300px
-  margin-left: -300px
-
-.layout-sidebar_inner
+  width: 200px
+  margin-left: -100%
 
 /* Footer */
 .layout-footer
-  height: 100px
+  height: 60px
 
 .layout-footer_inner
   width: 960px
-  height: 100px
+  height: 60px
   margin: 0 auto
-  background: #000
+  background: #5D83A9
   color: #fff
+  border-radius: 5px 5px 0 0
