--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -1,8 +1,5 @@
 //= require normalize-css/normalize
 //= require global
 //= require layout
-//= requre_tree .
+//= require_tree ./blocks
 //= require_self
-
-h1
-  color: red
