--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,20 +9,31 @@ html
   body.layout data-app="app"
     .layout-main
       header.layout-header data-view="header"
-        .layout-header_inner
-          | Header text here
+        .header
+          | History Widget Example
 
       .clearfix
         section.layout-content
           .layout-content_inner
-            = yield
+            .main_content
+              .page
+                = yield
 
         aside.layout-sidebar
-          .layout-sidebar_inner
-            | Sidebar text here
+          .menu
+            .menu-header
+              | Main menu
+            .menu-items
+              .menu-item.is-active
+                | — Dashboard
+              .menu-item
+                | — Search
+              .menu-item
+                | — About
 
       .layout-empty
 
     footer.layout-footer
       .layout-footer_inner
-        | Footer text here
+        .footer
+          | Footer text here
