--- a/app/assets/stylesheets/blocks/menu.sass
+++ b/app/assets/stylesheets/blocks/menu.sass
@@ -11,12 +11,14 @@
   border-radius: 5px
 
 .menu-item
+  display: block
   margin-top: 10px
   padding: 10px 15px
   height: 20px
   line-height: 20px
   color: #2B587A
   border-radius: 5px
+  text-decoration: none
 
   &:first-child
     margin-top: 0
