Design and some kind of backend code for search

--- a/app/assets/stylesheets/blocks/menu.sass
+++ b/app/assets/stylesheets/blocks/menu.sass
@@ -8,6 +8,7 @@
   line-height: 20px
   background: #D6DFE9
   color: #5D83A9
+  text-shadow: 0 1px rgba(255, 255, 255, .75)
   border-radius: 5px
 
 .menu-item
