--- a/app/views/search/_search_results.html.slim
+++ b/app/views/search/_search_results.html.slim
@@ -16,10 +16,10 @@
     .pagination.clearfix
       .pagination-page.is-active
         | 1
-      = link_to '2', search_path(params.merge(page: 2)), class: 'pagination-page'
+      = link_to '2', search_path(params.except(:full_page, :_).merge(page: 2)), class: 'pagination-page'
   - else
     .pagination
-      = link_to '1', search_path(params.except(:page)), class: 'pagination-page'
+      = link_to '1', search_path(params.except(:page, :full_page, :_)), class: 'pagination-page'
       .pagination-page.is-active
         | 2
 
