--- a/app/views/search/index.html.slim
+++ b/app/views/search/index.html.slim
@@ -2,13 +2,12 @@
   | Search
 
 .page-body
-  .search_form
+  .search_form data-view='search_form' data-field-name='status' data-value=selected_status
     .search_form-label
       | Status
-    .search_form-radio_buttons.clearfix data-value=selected_status
+    .search_form-radio_buttons.clearfix
       - statuses.each do |status|
-        - classes = ['search_form-radio', ('is-active' if status.to_s == selected_status)]
-        = link_to search_path(status: status), class: classes do
+        .search_form-radio.js-search_form-radio data-value=status
           = status.to_s.humanize
 
   .wrapper data-view='pagination'
