--- a/app/views/search/_search_results.html.slim
+++ b/app/views/search/_search_results.html.slim
@@ -14,10 +14,10 @@
     .pagination.clearfix
       .pagination-page.is-active
         | 1
-      = link_to '2', search_path(params.except(:full_page, :_, :format, :i_req_id).merge(page: 2)), class: 'pagination-page'
+      = link_to '2', search_path(params.merge(page: 2)), class: 'pagination-page'
   - else
     .pagination
-      = link_to '1', search_path(params.except(:full_page, :_, :format, :i_req_id).merge(page: 1)), class: 'pagination-page'
+      = link_to '1', search_path(params.merge(page: 1)), class: 'pagination-page'
       .pagination-page.is-active
         | 2
 
