--- a/app/views/layouts/ajax_layout.html.slim
+++ b/app/views/layouts/ajax_layout.html.slim
@@ -1,4 +1,10 @@
 html
   body
+    javascript:
+      parent.ijax.registerResponse('#{ijax_request_id}');
+
     = yield
+
+    javascript:
+      parent.ijax.resolveResponse();
 
